2006-01-23  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/serql.g (uri, query, namespaceList, namespace)
	(prefixName): Parse the USING NAMESPACE clause.

	* serql/parser.py (QName): New class for qualified name nodes.
	(Parser.__slots__, Parser.__init__, Parser.initLocalPrefixes) 
	(Parser.createLocalPrefix, Parser.getPrefixUri) 
	(Parser.resolveQName, Parser.expandQNames.operation) 
	(Parser.checkPrefix): Add support for query-defined namespace
	prefixes.

2006-01-20  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/environment.py (ParseEnvironment.parse): Convert ANTLR
	exceptions into serql module exceptions.

	* serql/error.py (Error, PositionError, SyntaxError) 
	(SemanticError): New classes to report parsing errors.

	* serql/serql.g: Deactivate default error handler.
	(var): Store location information into the Var object.

	* serql/parser.py (LocationNode, Var) 
	(SelectContext.expandVariables.operation): Extend variable nodes to
	have location info. Use that info to produce adequate unbound
	variable errors.

2006-01-20  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/__init__.py: Export only the parser environment.

	* serql/environment.py: New entry point for SerQL parsing,
	encapsulating parsing and expression simplification.

	* serql/parser.py (Parser.basePrefixes, Parser.getPrefixUri) 
	(Parser.resolveQName): Make the complete prefix table public and
	implement a two level lookup scheme for prefixes. Prefixes are now
	searched in the external 'prefixes' table, and, if not found, in
	the set of SerQL predefined prefixes.
	(__repr__, setPrefix): Deleted.

	* serql/serql.g (query): Add main production with simplified
	definition.

2006-01-20  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/serql.g (selectQuery, var, uri): 
	* serql/parser.py (Var, expandVariables.operation)
	(Parser.__slots__, Parser.__init__, Parser.setPrefix)
	(Parser.getPrefixUri, Parser.getPrefixes, Parser.resolveQName)